--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPf6dbS/tnJGMaFVexcSNNi",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyO5zQ/YJY+u+7HC9jVuK/dl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,7 +108,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 197
         },
         "outputId": "6ad141ea-a09e-4968-c5f4-8b48a764bc48"
       },
@@ -298,19 +299,38 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5b20b588-740d-4126-c440-5f64b00a6e67"
       },
       "source": [
         "from sklearn.naive_bayes import GaussianNB\n",
         "\n",
         "# train the classifier (naive beyasian modeling)\n",
         "classifier = GaussianNB()\n",
-        "classifier.fit(train_x, train_y)\n",
+        "classifier.fit(X_train, y_train)\n",
         "\n",
-        "predicted_y = classifier.predict(test_x)"
+        "predicted_y = classifier.predict(X_test)\n",
+        "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9333333333333333"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
+        }
+      ]
     }
   ]
 }
