--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO5zQ/YJY+u+7HC9jVuK/dl",
+      "authorship_tag": "ABX9TyNa7wsX9njqaewceUvBrOJw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -303,7 +303,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5b20b588-740d-4126-c440-5f64b00a6e67"
+        "outputId": "d522c3b4-c46c-4962-9bbd-4a4fdc05ec10"
       },
       "source": [
         "from sklearn.naive_bayes import GaussianNB\n",
@@ -316,7 +316,7 @@
         "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 69,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +328,45 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 69
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C6ywntBwRMUl",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b7bdcb46-05a0-4cc0-f27e-1375e9728c5c"
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# train the classifier (random forest modeling)\n",
+        "classifier = RandomForestClassifier(max_depth=4, random_state=0)\n",
+        "classifier.fit(X_train, y_train)\n",
+        "\n",
+        "predicted_y = classifier.predict(X_test)\n",
+        "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9555555555555556"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
         }
       ]
     }
