--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNa7wsX9njqaewceUvBrOJw",
+      "authorship_tag": "ABX9TyOK56vtqm/nXUuDWjm9FcWD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,6 +46,7 @@
       "metadata": {
         "id": "-BM3_uxdxt-M",
         "colab_type": "code",
+        "outputId": "d1af2964-c109-4486-889c-f00d7241244a",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -63,22 +64,21 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 74
-        },
-        "outputId": "780951a3-ab25-4fc6-e2c0-7ae06d78d781"
+        }
       },
       "source": [
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-655c0e35-41ce-4123-a702-4b822d76b6e7\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-655c0e35-41ce-4123-a702-4b822d76b6e7\">\n",
+              "     <input type=\"file\" id=\"files-4069c465-54b0-4503-981e-0876c37bcfec\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-4069c465-54b0-4503-981e-0876c37bcfec\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -106,17 +106,17 @@
       "metadata": {
         "id": "J5Bl-6WjxDza",
         "colab_type": "code",
+        "outputId": "915c0278-e965-4d23-8024-822ea7aff7f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
-        },
-        "outputId": "6ad141ea-a09e-4968-c5f4-8b48a764bc48"
+        }
       },
       "source": [
         "iris = pd.read_csv(\"iris.data\")\n",
         "iris.head()"
       ],
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 4
         }
       ]
     },
@@ -251,26 +251,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gJfN2AqH5ipt",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ix96llUm2Rv_",
         "colab_type": "code",
+        "outputId": "74f343e1-5c45-40aa-bbf3-4719c33d4f66",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "243ba8a3-3e6f-4a4f-b6e0-1ad0bf5bae72"
+        }
       },
       "source": [
         "Instance = HardCodedClassifier()\n",
@@ -278,7 +265,7 @@
         "accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 64,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -290,7 +277,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 7
         }
       ]
     },
@@ -299,11 +286,11 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
+        "outputId": "8c9b8e77-648d-4bb9-9590-5ddf47f83b40",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d522c3b4-c46c-4962-9bbd-4a4fdc05ec10"
+        }
       },
       "source": [
         "from sklearn.naive_bayes import GaussianNB\n",
@@ -316,7 +303,7 @@
         "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 70,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +315,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 70
+          "execution_count": 8
         }
       ]
     },
@@ -337,11 +324,11 @@
       "metadata": {
         "id": "C6ywntBwRMUl",
         "colab_type": "code",
+        "outputId": "ab38ba0e-c74f-498b-cd65-233e4bd06b11",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b7bdcb46-05a0-4cc0-f27e-1375e9728c5c"
+        }
       },
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -354,7 +341,7 @@
         "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 77,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +353,45 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_XtF_PBlPD5W",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6a8edb2f-c133-4472-d046-bef8395e0721"
+      },
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "# train the classifier (knn modeling)\n",
+        "classifier = KNeighborsClassifier(n_neighbors= int(np.floor(np.sqrt(y_test.size))), weights='uniform', algorithm='auto', leaf_size=30, p=2)\n",
+        "classifier.fit(X_train, y_train)\n",
+        "\n",
+        "predicted_y = classifier.predict(X_test)\n",
+        "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9777777777777777"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
         }
       ]
     }
