--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOK56vtqm/nXUuDWjm9FcWD",
+      "authorship_tag": "ABX9TyMiShdq7/B4Oxg6d/mUbVYo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,8 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn import preprocessing\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score"
       ],
       "execution_count": 0,
       "outputs": []
@@ -46,7 +47,7 @@
       "metadata": {
         "id": "-BM3_uxdxt-M",
         "colab_type": "code",
-        "outputId": "d1af2964-c109-4486-889c-f00d7241244a",
+        "outputId": "a6a537c6-373c-4bc6-8bbd-2f5cfca3866f",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -70,15 +71,15 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 3,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-4069c465-54b0-4503-981e-0876c37bcfec\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-4069c465-54b0-4503-981e-0876c37bcfec\">\n",
+              "     <input type=\"file\" id=\"files-96255ab5-5cdc-4f60-af43-1a541f42e6c1\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-96255ab5-5cdc-4f60-af43-1a541f42e6c1\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -95,7 +96,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving iris.data to iris.data\n"
+            "Saving iris.data to iris (5).data\n"
           ],
           "name": "stdout"
         }
@@ -106,7 +107,7 @@
       "metadata": {
         "id": "J5Bl-6WjxDza",
         "colab_type": "code",
-        "outputId": "915c0278-e965-4d23-8024-822ea7aff7f7",
+        "outputId": "bbc0a057-0e26-46c6-ae7d-c48f9dd58efd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -116,7 +117,7 @@
         "iris = pd.read_csv(\"iris.data\")\n",
         "iris.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 78
         }
       ]
     },
@@ -253,7 +254,7 @@
       "metadata": {
         "id": "ix96llUm2Rv_",
         "colab_type": "code",
-        "outputId": "74f343e1-5c45-40aa-bbf3-4719c33d4f66",
+        "outputId": "00161c7c-a96e-4f93-8ab3-c6fe374a6d0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -262,10 +263,12 @@
       "source": [
         "Instance = HardCodedClassifier()\n",
         "Instance.fit(X_train, y_train)\n",
-        "accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
+        "predicted_y = Instance.predict(X_test)\n",
+        "accuracy = accuracy_score(y_test, predicted_y)\n",
+        "# accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 7,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 81
         }
       ]
     },
@@ -286,7 +289,7 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
-        "outputId": "8c9b8e77-648d-4bb9-9590-5ddf47f83b40",
+        "outputId": "0207e1ee-5b90-4d1d-f5c0-7aac34b482e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -300,10 +303,11 @@
         "classifier.fit(X_train, y_train)\n",
         "\n",
         "predicted_y = classifier.predict(X_test)\n",
-        "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy = accuracy_score(y_test, predicted_y)\n",
+        "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 8,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 82
         }
       ]
     },
@@ -324,7 +328,7 @@
       "metadata": {
         "id": "C6ywntBwRMUl",
         "colab_type": "code",
-        "outputId": "ab38ba0e-c74f-498b-cd65-233e4bd06b11",
+        "outputId": "898dd6ae-410f-4d7e-8d6c-154104256166",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -338,10 +342,11 @@
         "classifier.fit(X_train, y_train)\n",
         "\n",
         "predicted_y = classifier.predict(X_test)\n",
-        "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy = accuracy_score(y_test, predicted_y)\n",
+        "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 9,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 83
         }
       ]
     },
@@ -366,7 +371,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "6a8edb2f-c133-4472-d046-bef8395e0721"
+        "outputId": "5163e049-9cb4-4714-bbd0-c25bd011a923"
       },
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -376,10 +381,11 @@
         "classifier.fit(X_train, y_train)\n",
         "\n",
         "predicted_y = classifier.predict(X_test)\n",
-        "accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
+        "accuracy = accuracy_score(y_test, predicted_y)\n",
+        "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 21,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -391,7 +397,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 84
         }
       ]
     }
