--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMiShdq7/B4Oxg6d/mUbVYo",
+      "authorship_tag": "ABX9TyNQZ8o+a4JlX/9X33/A9Tdi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-BM3_uxdxt-M",
         "colab_type": "code",
-        "outputId": "a6a537c6-373c-4bc6-8bbd-2f5cfca3866f",
+        "outputId": "86ce5aca-512c-4698-9b9c-dca3b81292ac",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -71,15 +71,15 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 77,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-96255ab5-5cdc-4f60-af43-1a541f42e6c1\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-96255ab5-5cdc-4f60-af43-1a541f42e6c1\">\n",
+              "     <input type=\"file\" id=\"files-a6caa7f5-a1dc-4769-91f4-c30bda38be64\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-a6caa7f5-a1dc-4769-91f4-c30bda38be64\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -96,7 +96,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving iris.data to iris (5).data\n"
+            "Saving iris.data to iris.data\n"
           ],
           "name": "stdout"
         }
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "J5Bl-6WjxDza",
         "colab_type": "code",
-        "outputId": "bbc0a057-0e26-46c6-ae7d-c48f9dd58efd",
+        "outputId": "7c3c5402-8430-4fb5-cd7f-724b94d81b4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
@@ -117,7 +117,7 @@
         "iris = pd.read_csv(\"iris.data\")\n",
         "iris.head()"
       ],
-      "execution_count": 78,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 4
         }
       ]
     },
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "ix96llUm2Rv_",
         "colab_type": "code",
-        "outputId": "00161c7c-a96e-4f93-8ab3-c6fe374a6d0b",
+        "outputId": "0e280206-5fdc-4a39-ec41-db82df48a0f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -268,7 +268,7 @@
         "# accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 81,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 7
         }
       ]
     },
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
-        "outputId": "0207e1ee-5b90-4d1d-f5c0-7aac34b482e5",
+        "outputId": "42d9fe17-30a4-4463-9b9c-8fd880c0e2ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -307,7 +307,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 82,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 8
         }
       ]
     },
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "C6ywntBwRMUl",
         "colab_type": "code",
-        "outputId": "898dd6ae-410f-4d7e-8d6c-154104256166",
+        "outputId": "2711d086-8837-435c-867c-5fbcbf1b7298",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -346,7 +346,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 83,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 9
         }
       ]
     },
@@ -367,14 +367,22 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
+        "outputId": "f8748159-f2a1-4de5-b676-64db82cc12b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5163e049-9cb4-4714-bbd0-c25bd011a923"
+        }
       },
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
+        "\n",
+        "def standardization(x):\n",
+        "  return (x - np.mean(x))/ np.std(x)\n",
+        "\n",
+        "X = pd.DataFrame(X).apply(standardization)\n",
+        "\n",
+        "def calc_distance(self, x1, x2):\n",
+        "  \n",
         "\n",
         "# train the classifier (knn modeling)\n",
         "classifier = KNeighborsClassifier(n_neighbors= int(np.floor(np.sqrt(y_test.size))), weights='uniform', algorithm='auto', leaf_size=30, p=2)\n",
@@ -383,9 +391,9 @@
         "predicted_y = classifier.predict(X_test)\n",
         "accuracy = accuracy_score(y_test, predicted_y)\n",
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
-        "accuracy"
+        "accuracy\n"
       ],
-      "execution_count": 84,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -397,7 +405,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 84
+          "execution_count": 22
         }
       ]
     }
