--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQZ8o+a4JlX/9X33/A9Tdi",
+      "authorship_tag": "ABX9TyP+qpTKvLz0y+yFTSvx9EB7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "f8748159-f2a1-4de5-b676-64db82cc12b8",
+        "outputId": "b4c28eaa-de52-48a3-fa99-75aef1345689",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -382,7 +382,16 @@
         "X = pd.DataFrame(X).apply(standardization)\n",
         "\n",
         "def calc_distance(self, x1, x2):\n",
-        "  \n",
+        "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(self.training.shape[1])]))\n",
+        "\n",
+        "Instance = HardCodedClassifier()\n",
+        "Instance.fit(X_train, y_train)\n",
+        "\n",
+        "Instance.calc_distance = calc_distance.__get__(Instance)\n",
+        "# Instance.calc_distance(Instance.training[0], Instance.training[1])\n",
+        "\n",
+        "def predict(self, data, k):\n",
+        "  for i in range(data.)\n",
         "\n",
         "# train the classifier (knn modeling)\n",
         "classifier = KNeighborsClassifier(n_neighbors= int(np.floor(np.sqrt(y_test.size))), weights='uniform', algorithm='auto', leaf_size=30, p=2)\n",
@@ -391,21 +400,21 @@
         "predicted_y = classifier.predict(X_test)\n",
         "accuracy = accuracy_score(y_test, predicted_y)\n",
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
-        "accuracy\n"
+        "accuracy"
       ],
-      "execution_count": 22,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9777777777777777"
+              "6.0398675482166"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 28
         }
       ]
     }
