--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP+qpTKvLz0y+yFTSvx9EB7",
+      "authorship_tag": "ABX9TyNt18iRNXbqUEVcLs9yMQyH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-BM3_uxdxt-M",
         "colab_type": "code",
-        "outputId": "86ce5aca-512c-4698-9b9c-dca3b81292ac",
+        "outputId": "68aa6390-9b23-46d2-da74-91811d4d555a",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -71,15 +71,15 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-a6caa7f5-a1dc-4769-91f4-c30bda38be64\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-a6caa7f5-a1dc-4769-91f4-c30bda38be64\">\n",
+              "     <input type=\"file\" id=\"files-ce46eea4-c6d1-410e-b3df-4a6e3b9babe5\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-ce46eea4-c6d1-410e-b3df-4a6e3b9babe5\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -96,7 +96,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving iris.data to iris.data\n"
+            "Saving iris.txt to iris.txt\n"
           ],
           "name": "stdout"
         }
@@ -107,17 +107,17 @@
       "metadata": {
         "id": "J5Bl-6WjxDza",
         "colab_type": "code",
-        "outputId": "7c3c5402-8430-4fb5-cd7f-724b94d81b4a",
+        "outputId": "b11a9029-7ea6-4484-aa71-5d3a0e0a3e36",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 197
+          "height": 204
         }
       },
       "source": [
-        "iris = pd.read_csv(\"iris.data\")\n",
+        "iris = pd.read_csv(\"iris.txt\")\n",
         "iris.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 10
         }
       ]
     },
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "ix96llUm2Rv_",
         "colab_type": "code",
-        "outputId": "0e280206-5fdc-4a39-ec41-db82df48a0f9",
+        "outputId": "11651de0-6bee-4462-f4d0-56ebb7ecd8fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -268,7 +268,7 @@
         "# accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 7,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 13
         }
       ]
     },
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
-        "outputId": "42d9fe17-30a4-4463-9b9c-8fd880c0e2ae",
+        "outputId": "e09a3de4-90c0-4764-d111-0a057dd154fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -307,7 +307,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 14
         }
       ]
     },
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "C6ywntBwRMUl",
         "colab_type": "code",
-        "outputId": "2711d086-8837-435c-867c-5fbcbf1b7298",
+        "outputId": "baacb074-cf04-47af-ffe6-633e90c84c43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -346,7 +346,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 15
         }
       ]
     },
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "b4c28eaa-de52-48a3-fa99-75aef1345689",
+        "outputId": "22e2fc6d-c4b9-47c9-8a2d-68c0b4512d2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -380,19 +380,41 @@
         "  return (x - np.mean(x))/ np.std(x)\n",
         "\n",
         "X = pd.DataFrame(X).apply(standardization)\n",
-        "\n",
-        "def calc_distance(self, x1, x2):\n",
-        "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(self.training.shape[1])]))\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.3, random_state= 1)\n",
         "\n",
         "Instance = HardCodedClassifier()\n",
         "Instance.fit(X_train, y_train)\n",
         "\n",
+        "def calc_distance(self, x1, x2):\n",
+        "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(self.training.shape[1])]))\n",
+        "\n",
         "Instance.calc_distance = calc_distance.__get__(Instance)\n",
-        "# Instance.calc_distance(Instance.training[0], Instance.training[1])\n",
-        "\n",
-        "def predict(self, data, k):\n",
-        "  for i in range(data.)\n",
-        "\n",
+        "# Instance.calc_distance(Instance.training[0], X_test.iloc[0,:])"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.444492461840339"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CVDezDkIR8j-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "# train the classifier (knn modeling)\n",
         "classifier = KNeighborsClassifier(n_neighbors= int(np.floor(np.sqrt(y_test.size))), weights='uniform', algorithm='auto', leaf_size=30, p=2)\n",
         "classifier.fit(X_train, y_train)\n",
@@ -402,21 +424,8 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6.0398675482166"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 28
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
