--- a/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
+++ b/01_Prove_Assignment_Experiment_Harness_&_Hardcoded_Classifier.ipynb
@@ -6,7 +6,7 @@
       "name": "01 Prove : Assignment - Experiment Harness & Hardcoded Classifier.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNt18iRNXbqUEVcLs9yMQyH",
+      "authorship_tag": "ABX9TyOlhZ3nw2SIuvP8ta+BphBG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "-BM3_uxdxt-M",
         "colab_type": "code",
-        "outputId": "68aa6390-9b23-46d2-da74-91811d4d555a",
+        "outputId": "8012f0dd-cf27-4359-fc9e-855d7a543c40",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -71,15 +71,15 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-ce46eea4-c6d1-410e-b3df-4a6e3b9babe5\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-ce46eea4-c6d1-410e-b3df-4a6e3b9babe5\">\n",
+              "     <input type=\"file\" id=\"files-e725cc64-38de-48a1-91e7-20cb4e979a61\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-e725cc64-38de-48a1-91e7-20cb4e979a61\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -96,7 +96,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving iris.txt to iris.txt\n"
+            "Saving iris.data to iris.data\n"
           ],
           "name": "stdout"
         }
@@ -107,17 +107,17 @@
       "metadata": {
         "id": "J5Bl-6WjxDza",
         "colab_type": "code",
-        "outputId": "b11a9029-7ea6-4484-aa71-5d3a0e0a3e36",
+        "outputId": "407727eb-0197-41b7-f567-aa10248fcd58",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 197
         }
       },
       "source": [
-        "iris = pd.read_csv(\"iris.txt\")\n",
+        "iris = pd.read_csv(\"iris.data\")\n",
         "iris.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 3
         }
       ]
     },
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "ix96llUm2Rv_",
         "colab_type": "code",
-        "outputId": "11651de0-6bee-4462-f4d0-56ebb7ecd8fd",
+        "outputId": "829650fe-b95e-49d1-f7c3-d2dab7625b15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -268,7 +268,7 @@
         "# accuracy = y_test[Instance.predict(X_test) == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     },
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "AJsAfT7Ez2Bc",
         "colab_type": "code",
-        "outputId": "e09a3de4-90c0-4764-d111-0a057dd154fa",
+        "outputId": "80fdf30f-69f6-41b2-a045-12b49a1a48cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -307,7 +307,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -319,7 +319,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 7
         }
       ]
     },
@@ -328,7 +328,7 @@
       "metadata": {
         "id": "C6ywntBwRMUl",
         "colab_type": "code",
-        "outputId": "baacb074-cf04-47af-ffe6-633e90c84c43",
+        "outputId": "3f1e799f-d27f-495f-e584-0b750a8f738d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -346,7 +346,7 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +358,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 8
         }
       ]
     },
@@ -367,10 +367,10 @@
       "metadata": {
         "id": "_XtF_PBlPD5W",
         "colab_type": "code",
-        "outputId": "22e2fc6d-c4b9-47c9-8a2d-68c0b4512d2c",
+        "outputId": "d832fb13-dc93-49e4-9075-781b5de8d44d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 203
         }
       },
       "source": [
@@ -379,7 +379,9 @@
         "def standardization(x):\n",
         "  return (x - np.mean(x))/ np.std(x)\n",
         "\n",
-        "X = pd.DataFrame(X).apply(standardization)\n",
+        "# to_numpy() makes a code simpler\n",
+        "X = standardization(X)\n",
+        "# X = pd.DataFrame(X).apply(standardization)\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.3, random_state= 1)\n",
         "\n",
         "Instance = HardCodedClassifier()\n",
@@ -389,21 +391,28 @@
         "  return np.sqrt(sum([(x1[i] - x2[i]) ** 2 for i in range(self.training.shape[1])]))\n",
         "\n",
         "Instance.calc_distance = calc_distance.__get__(Instance)\n",
-        "# Instance.calc_distance(Instance.training[0], X_test.iloc[0,:])"
+        "# Instance.calc_distance(Instance.training[0], X_test.iloc[0,:])\n",
+        "\n",
+        "ls = []\n",
+        "for i in X_train:\n",
+        "  for j in X_test:\n",
+        "    ls.append(Instance.calc_distance(i, j))\n",
+        "\n",
+        "distance = np.reshape(ls,(X_train.shape[0], X_test.shape[0]))\n",
+        "\n"
       ],
-      "execution_count": 22,
+      "execution_count": 41,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3.444492461840339"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 22
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-41-d8707173f3a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mdistance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mls\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+          ]
         }
       ]
     },
@@ -412,7 +421,11 @@
       "metadata": {
         "id": "CVDezDkIR8j-",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cab72cae-c282-4d90-ae5f-2258b0829bf4"
       },
       "source": [
         "# train the classifier (knn modeling)\n",
@@ -424,8 +437,21 @@
         "# accuracy = y_test[predicted_y == y_test].size / y_test.size\n",
         "accuracy"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9777777777777777"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     }
   ]
 }
